# grasping_vision

./: CMakeLists.txt  Dockerfile  README.md  package.xml  run_docker.sh  rviz_config.rviz
launch/: rgbd_to_pc.launch
scripts/: command_node.py  metric_learning_segmentation_node.py
scripts/datafiles/: test_data_own_dino.pth
src/: get_obb.cpp
